--- a/index.html
+++ b/index.html
@@ -458,8 +458,7 @@
           <!-- </a> -->
         </div>
 
-       <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-          <!-- <a href="https://twitter.com/liamihorne" target="_blank"> -->
+       <!-- <div class="col-xl-2 col-md-3 col-sm-4 col-6">
             <div class="speaker-card">
               <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/C5603AQFA7VGuBuaEbA/profile-displayphoto-shrink_800_800/0/1517686096800?e=1688601600&v=beta&t=kGM9xHKRC72ScOZdT7lFxQPoWdxD8d3PWmetcTds6z8" alt="Liam Horne">
               <div class="speaker-card-body">
@@ -470,40 +469,35 @@
                 </div>
               </div>
             </div>
-          <!-- </a> -->
-        </div>
+        </div> -->
 
-      <!--    <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-          <a href="https://twitter.com/ethanwilding" target="_blank">
+     <div class="col-xl-2 col-md-3 col-sm-4 col-6">
             <div class="speaker-card">
-              <img class="speaker-card-img-top" src="img/ethan.jpg" alt="Ethan Wilding">
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/D4D03AQGHfhFZvwt8wQ/profile-displayphoto-shrink_400_400/0/1667521738544?e=1689206400&v=beta&t=X87xB8Ul_1PCarQP40Htw5eMT3nfvgfpqbOV0ptxacg" alt="Ethan Wilding">
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
-                  <h5>Ethan Wilding</h5>
-                  <p class="text-faded">Founding Team
-                    <br />Ethereum Foundation</p>
+                  <h5>Harsh Vardhan Mishra</h5>
+                  <p class="text-faded">Director
+                    <br />LearnNowX,Practice Head at Cloud Analogy</p>
                 </div>
               </div>
             </div>
-          </a>
         </div>
 
-        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-          <a href="https://twitter.com/ajd36" target="_blank">
+         <div class="col-xl-2 col-md-3 col-sm-4 col-6">
             <div class="speaker-card">
-              <img class="speaker-card-img-top" src="img/andrew.jpg" alt="Andrew Dunscomb">
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/D4D03AQFLqKYatylkuA/profile-displayphoto-shrink_800_800/0/1678884231581?e=1689206400&v=beta&t=1L7oSPGxe9V6Ifze_8XY-5fSQQNm47bRQ5x1BxEBrrI" alt="Ajay singh">
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
-                  <h5>Andrew Dunscomb</h5>
-                  <p class="text-faded">Operations Director
-                    <br />ETHGlobal</p>
+                  <h5>Ajay Singh </h5>
+                  <p class="text-faded">Co-Founder
+                    <br />DLT labs</p>
                 </div>
               </div>
             </div>
-          </a>
         </div>
 
-        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+       <!--     <div class="col-xl-2 col-md-3 col-sm-4 col-6">
           <a href="https://twitter.com/LembleAugusto" target="_blank">
             <div class="speaker-card">
               <img class="speaker-card-img-top" src="img/augusto.jpg" alt="Augusto Lemble">
@@ -777,6 +771,366 @@
 
 
   
+  <section id="jury panel" class="bg-primary" >
+
+    <div class="container" >
+      <div class="row" >
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">Jury Members</h2>
+        </div>
+      </div>
+    </div>
+    <!-- style="margin: 0px 150px;'' -->
+    <div class="container mt-5" >
+      <div class="row no-gutters" style="display: flex; align-items:center;justify-content: center;">
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6" >
+            <div class="speaker-card" >
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/D4D03AQEiEGgfxXm1MA/profile-displayphoto-shrink_800_800/0/1671345930409?e=1689206400&v=beta&t=5SptcHDrW0J6WMRHLrlV3xd3z1tmNJcJQvqObOYC4fA" alt="Nadav Hollandar"/>
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Dr. Vivek Kumar</h5>
+                  <p class="text-faded"> Deputy HOD,Dept. of CSE
+                    <br />NIET</p>
+                </div>
+              </div>
+            </div>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <!-- <a href="https://twitter.com/virgilgr" target="_blank"> -->
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/D4D03AQEhGKAfD4TdyQ/profile-displayphoto-shrink_800_800/0/1676505444630?e=1689206400&v=beta&t=qnYFEgsOiAWCTsgY8lkqUm-X1tsjwY60rBSvpG4FK0w">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Dr. Hitesh</h5>
+                  <p class="text-faded"> Deputy HOD,Dept. of CSE
+                    <br />NIET</p>
+                </div>
+              </div>
+            </div>
+          <!-- </a> -->
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <!-- <a href="https://twitter.com/TheRealKartik" target="_blank"> -->
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/C5603AQElx0jk9cUTGw/profile-displayphoto-shrink_800_800/0/1591248318446?e=1689206400&v=beta&t=a7_h6-w6FpFHrBIyBNJTX3flzzil21CUliEigm0hC3A" alt="Rashmi Mishra">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Rashmi Mishra</h5>
+                  <p class="text-faded">HOD,Dept. of Biotech
+                    <br />NIET</p>
+                </div>
+              </div>
+            </div>
+        </div>
+
+       <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/D4D03AQExcPaBkCWRVA/profile-displayphoto-shrink_800_800/0/1661510906544?e=1689206400&v=beta&t=oCGxbFFmIAO55m7e9mOvXPPUKbLRIpQTdyldh3rxza8" alt="bhawna wadhwa ">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>bhawna wadhwa </h5>
+                  <p class="text-faded">HOD,Dept. of CSE
+                    <br />NIET</p>
+                </div>
+              </div>
+            </div>
+        </div>
+
+     <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/C4D03AQHNGwnY_zVxgA/profile-displayphoto-shrink_800_800/0/1609787285434?e=1689206400&v=beta&t=EsuOscFIw9pTz1UXOjkrnRviBTO-lM1a4gwSdlIsA-g" alt="Dr. Priyanka Chandani ">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Dr. Priyanka Chandani </h5>
+                  <p class="text-faded">HOD, Dept. of AI,CSBS & DS
+                    <br />NIET</p>
+                </div>
+              </div>
+            </div>
+        </div>
+
+         <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/C5103AQFx7z31RrNCPA/profile-displayphoto-shrink_800_800/0/1541772379241?e=1689206400&v=beta&t=71LI3co_0hc7HVx4NWQiIyWDdXfXAutl1UhXtAeTZ5o" alt="DR. Pavan Shukhla">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Dr. Pavan Shukhla</h5>
+                  <p class="text-faded">HOD, Dept. of ECE
+                    <br />NIET</p>
+                </div>
+              </div>
+            </div>
+        </div>
+
+      <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/C4E03AQGgnKmxDHCCYw/profile-displayphoto-shrink_800_800/0/1621930860230?e=1689206400&v=beta&t=1z3ZG2jdBYKz0oDl6nVH0aKO9MNrUnG8D1OFoB4RA78" alt="Augusto Lemble">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Dr. Poornima Mehta</h5>
+                  <p class="text-faded">Associate Professor
+                    <br />NIET</p>
+                </div>
+              </div>
+            </div>
+        </div>
+
+         <!--   <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/Arjun_Bhuptani" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/arjun.jpg" alt="Arjun Bhuptani">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Arjun Bhuptani</h5>
+                  <p class="text-faded">Founder
+                    <br />Connext</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+          <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/aparnalocked" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/aparna.jpg" alt="Aparna Krishnan">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Aparna Krishnan</h5>
+                  <p class="text-faded">Co-founder
+                    <br />Mechanism Labs</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/ricburton" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/richard.jpg" alt="Richard Burton">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Richard Burton</h5>
+                  <p class="text-faded">CEO
+                    <br />Balance</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/web3jp" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/jack.jpg" alt="Jack Platts">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Jack Platts</h5>
+                  <p class="text-faded">Communications Director
+                    <br />Web3 Foundation</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/viisundaram" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/vii.jpg" alt="Elena Nadolinski">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Vii Sundaram</h5>
+                  <p class="text-faded">Tech Lead
+                    <br />Lendroid</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/saturnial" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/kayvon.jpg" alt="Kayvon Tehranian">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Kayvon Tehranian</h5>
+                  <p class="text-faded">Sr. Software Engineer
+                    <br />Dharma</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/newmichwill" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/michael.jpg" alt="Dr. Michael Egorov">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Dr. Michael Egorov</h5>
+                  <p class="text-faded">CTO
+                    <br />NuCypher</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <div class="speaker-card">
+            <img class="speaker-card-img-top" src="img/bogdan.jpg" alt="Bogdan Opanchuk">
+            <div class="speaker-card-body">
+              <div class="speaker-card-header">
+                <h5>Bogdan Opanchuk</h5>
+                <p class="text-faded">Research/Engineer
+                  <br />NuCypher</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <div class="speaker-card">
+            <img class="speaker-card-img-top" src="img/sean.jpg" alt="Sean Brennan">
+            <div class="speaker-card-body">
+              <div class="speaker-card-header">
+                <h5>Sean Brennan</h5>
+                <p class="text-faded">Developer
+                  <br />MakerDAO</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/cryptowanderer" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/andy.jpg" alt="Andy Tudhope">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Andy Tudhope</h5>
+                  <p class="text-faded">Lead: Developer Relations
+                    <br />Status</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/_jdkanani" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/jaynti.jpg" alt="Jaynti Kanani">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Jaynti Kanani</h5>
+                  <p class="text-faded">Co-Founder &amp; CEO
+                    <br />Matic Network</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/GautamSeshadri" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/gautam.jpg" alt="Gautam Seshadri">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Gautam Seshadri</h5>
+                  <p class="text-faded">Co-Founder
+                    <br />Zenprivex</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/evan_van_ness" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/evan.jpg" alt="Evan Van Ness">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Evan Van Ness</h5>
+                  <p class="text-faded">Week in Ethereum
+                    <br />ConsenSys</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/ArthurFalls" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/arthur.jpg" alt="Arthur Falls">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Arthur Falls</h5>
+                  <p class="text-faded">Director of Communications
+                    <br />DFINITY</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/91krish" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/krishna.jpg" alt="Krishna Sriram">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Krishna Sriram</h5>
+                  <p class="text-faded">Head of Global Partnerships
+                    <br />Quantstamp</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/niraj" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/niraj.jpg" alt="Niraj Pant">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Niraj Pant</h5>
+                  <p class="text-faded">Research
+                    <br />Polychain Capital</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <a href="https://twitter.com/nitinsharma1" target="_blank">
+            <div class="speaker-card">
+              <img class="speaker-card-img-top" src="img/nitin.jpg" alt="Nitin Sharma">
+              <div class="speaker-card-body">
+                <div class="speaker-card-header">
+                  <h5>Nitin Sharma</h5>
+                  <p class="text-faded">Founder
+                    <br />Incrypt Blockchain</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div> -->
+
+      </div>
+  </section>
 
 
 
