--- a/index.html
+++ b/index.html
@@ -840,7 +840,6 @@
         </div>
 
         <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-          <!-- <a href="https://twitter.com/virgilgr" target="_blank"> -->
             <div class="speaker-card">
               <img class="speaker-card-img-top" src="https://media.licdn.com/dms/image/D4D03AQEhGKAfD4TdyQ/profile-displayphoto-shrink_800_800/0/1676505444630?e=1689206400&v=beta&t=qnYFEgsOiAWCTsgY8lkqUm-X1tsjwY60rBSvpG4FK0w">
               <div class="speaker-card-body">
@@ -851,8 +850,19 @@
                 </div>
               </div>
             </div>
-          <!-- </a> -->
         </div>
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+          <div class="speaker-card">
+            <img class="speaker-card-img-top" src="https://media.discordapp.net/attachments/891025496601661504/1104738194748096543/WhatsApp_Image_2023-05-07_at_4.57.57_PM.jpeg?width=475&height=462">
+            <div class="speaker-card-body">
+              <div class="speaker-card-header">
+                <h5>Dr. Prabha</h5>
+                <p class="text-faded"> Deputy HOD,Dept. of IOT
+                  <br />NIET</p>
+              </div>
+            </div>
+          </div>
+      </div>
 
         <div class="col-xl-2 col-md-3 col-sm-4 col-6">
           <!-- <a href="https://twitter.com/TheRealKartik" target="_blank"> -->
@@ -861,6 +871,7 @@
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
                   <h5>Rashmi Mishra</h5>
+                  <br>
                   <p class="text-faded">HOD,Dept. of Biotech
                     <br />NIET</p>
                 </div>
@@ -874,6 +885,7 @@
               <div class="speaker-card-body">
                 <div class="speaker-card-header">
                   <h5>bhawna wadhwa </h5>
+                  <br>
                   <p class="text-faded">HOD,Dept. of CSE
                     <br />NIET</p>
                 </div>
